--- a/styles/landing.css
+++ b/styles/landing.css
@@ -53,3 +53,36 @@ nav {
   padding: 309px 267.5px 152px 267.5px;
   text-align: center;
 }
+
+/* Action Style */
+.action {
+  display: flex;
+  margin: 116px 159px 116px 141px;
+  justify-content: space-between;
+  gap: 220px;
+}
+
+.action-text {
+  margin: 62.5px 220px 62.5px 0;
+  font-size: 42px;
+  font-weight: 800px;
+}
+.action-des-text {
+  font-size: 24px;
+
+  color: #252432;
+}
+
+.raleway-des {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.action-img {
+  border-radius: 48px;
+}
+/* .action-block {
+  height: 517px;
+  width: 203px;
+} */
