--- a/styles/landing.css
+++ b/styles/landing.css
@@ -93,6 +93,30 @@ nav {
   margin: 116px 159px 137px 141px;
 }
 
+.joined {
+  padding: 50px 142px 50px 142px;
+}
+
+.font-h3 {
+  font-size: 45px;
+  text-align: center;
+}
+.user-count ul {
+  display: flex;
+  gap: 158px;
+  justify-content: space-around;
+}
+
+.user-count ul li {
+  font-size: 97px;
+  font-weight: 800;
+}
+
+.user-count-des {
+  display: flex;
+  gap: 158px;
+  justify-content: space-around;
+}
 /* What our users say */
 .star-icon {
   display: flex;
