--- a/styles/landing.css
+++ b/styles/landing.css
@@ -168,6 +168,15 @@ nav {
 /* What our users say */
 .star-icon {
   display: flex;
+  margin-bottom: 24px;
+  margin-top: 24px;
+}
+
+.loved-design {
+  margin-bottom: 8px;
+}
+.temp {
+  margin-bottom: 24px;
 }
 .users-say {
   display: flex;
@@ -190,18 +199,20 @@ nav {
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+  margin-right: 12px;
 }
 
 .user-image-decoration {
   display: flex;
 }
 
-/* .box {
+.box {
   width: 336px;
   height: 243px;
   padding-left: 24px;
   padding-right: 24px;
-} */
+  background-color: #ffffff;
+}
 
 /* Connect me */
 .connect-me {
