--- a/styles/landing.css
+++ b/styles/landing.css
@@ -25,7 +25,7 @@ body {
 
 /* hero section */
 .hero {
-  background-image: url(../Assets/Hero-bg.png);
+  background-image: url("../Assets/Hero-bg.png");
   background-size: cover;
   background-position: center;
   height: 698px;
